--- a/javascriptTuts/index.html
+++ b/javascriptTuts/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 
-<html>
+<html lang="en">
     <head>
+        <meta name="charset" content="UTF-8">
         <title>Javacript Tutorial</title>
-        <meta name="author" content="Vijay Kumar">  
+        <meta name="author" content="Vijay Kumar">
+        <meta name="viewport" content="width=device-width, initial scale=1.0" >
     </head>
     <body>
-        
+
     </body>
 </html>
